# zash

./: CMakeLists.txt  README.md
include/: commands.h  debugger.h  editor.h  open.h  save.h  window.h
src/: commands.c  debugger.c  editor.c  main.c  open.c  save.c  window.c
